fixed the margins in histogram.
it was too wide in setup page

--- a/application/views/themes/default/histogram/css/histogram.css
+++ b/application/views/themes/default/histogram/css/histogram.css
@@ -1,4 +1,4 @@
-body { margin: 0px 1%; }
+body { margin: 0px; }
 
 #progress{
 	position: absolute;
